--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  equatable: ^1.0.3
+  hive_flutter: ^0.3.0+1
   shared_preferences: ^0.5.6+1
   path_provider: ^1.6.0
   hive: ^1.3.0
   dio: ^3.0.8
   flutter_mobx: ^1.0.1
   mobx: ^1.0.1
-  flutter_modular: ^0.4.1
+  flutter_modular: ^0.4.2
   flutter:
     sdk: flutter
 
